--- a/userarea/test.html
+++ b/userarea/test.html
@@ -5,6 +5,8 @@
 Ceci est une page test
 </title>
 <link href='css/file.css' rel='stylesheet'/>
+<script src='js/file.js'>
+</script>
 </head>
 <body>
 <form action='http://localhost/pybee/browser.py?file=myaction&path=default' method='post'>
