--- a/userarea/test.html
+++ b/userarea/test.html
@@ -10,10 +10,12 @@ Ceci est une page test
 </head>
 <body>
 <form action='http://localhost/pybee/browser.py?file=myaction&path=default' method='post'>
+<div id='division'>
 <label for='mydiv'>
 Ceci est mon label
 </label>
 <input type='text' value='test' id='mydiv'/>
+</div>
 </form>
 </body>
 </html>
