--- a/userarea/test.html
+++ b/userarea/test.html
@@ -16,6 +16,7 @@ Ceci est mon label
 </label>
 <input type='text' value='test' id='mydiv'/>
 </div>
+<img src='img/bb.jpeg' width='300'/>
 </form>
 </body>
 </html>
