--- a/userarea/test.html
+++ b/userarea/test.html
@@ -12,7 +12,7 @@ Ceci est une page test
 <form action='http://localhost/pybee/browser.py?file=myaction&path=default' method='post'>
 <div id='division'>
 <label for='mydiv'>
-Ceci est mon label
+Ceci est mon label :
 </label>
 <input type='text' value='test' id='mydiv'/>
 </div>
