--- a/userarea/test.html
+++ b/userarea/test.html
@@ -17,6 +17,8 @@ Ceci est mon label :
 <input type='text' value='test' id='mydiv'/>
 </div>
 <img src='img/bb.jpeg' width='300'/>
+<textarea id='ta'>
+</textarea>
 </form>
 </body>
 </html>
