--- a/userarea/test.html
+++ b/userarea/test.html
@@ -20,6 +20,21 @@ Ceci est mon label :
 <br/>
 <textarea id='ta'>
 </textarea>
+<br/>
+<select id='cars' style='width:300px;'>
+<option value='volvo'>
+Volvo
+</option>
+<option value='saab'>
+Saab
+</option>
+<option value='mercedes'>
+Mercedes
+</option>
+<option value='audi'>
+Audi
+</option>
+</select>
 </form>
 </body>
 </html>
