--- a/userarea/test.html
+++ b/userarea/test.html
@@ -21,7 +21,7 @@ Ceci est mon label :
 <textarea id='ta'>
 </textarea>
 <br/>
-<select id='cars' style='width:300px;'>
+<select id='cars'>
 <option value='volvo'>
 Volvo
 </option>
