--- a/userarea/test.html
+++ b/userarea/test.html
@@ -35,6 +35,12 @@ Mercedes
 Audi
 </option>
 </select>
+<button onclick='alert("Hello world!")' type='button'>
+Valider
+</button>
 </form>
+<a href='http://www.yahoo.fr'>
+yahoo
+</a>
 </body>
 </html>
