--- a/userarea/test.html
+++ b/userarea/test.html
@@ -25,7 +25,7 @@ Ceci est mon label :
 <option value='volvo'>
 Volvo
 </option>
-<option value='saab'>
+<option selected='y' value='saab'>
 Saab
 </option>
 <option value='mercedes'>
