--- a/userarea/test.html
+++ b/userarea/test.html
@@ -7,6 +7,9 @@ Ceci est une page test
 <link href='css/file.css' rel='stylesheet'/>
 <script src='js/file.js'>
 </script>
+<style>
+textarea { background-color: DarkSalmon; color: white; }
+</style>
 </head>
 <body>
 <form action='http://localhost/pybee/browser.py?file=myaction&path=default' method='post'>
