--- a/userarea/test.html
+++ b/userarea/test.html
@@ -52,5 +52,17 @@ Test de titre 1
 <p>
 Ceci est mon premier paragraph avec Beetle
 </p>
+<h2>
+Test de titre 2
+</h2>
+<h3>
+Test de titre 3
+</h3>
+<h4>
+Test de titre 4
+</h4>
+<h5>
+Test de titre 5
+</h5>
 </body>
 </html>
