--- a/userarea/test3.html
+++ b/userarea/test3.html
@@ -2,16 +2,22 @@
 <html lang='fr'>
 <head>
 <style>
-
+#container_login { display: grid; grid-template-columns: 200px auto; grid-template-rows: 500px; }
+#container_login { background-color: indianred; padding:10px; }
+#container_login > div { background-color: #f1f1f1; border: 1px solid black;}
 </style>
 <title>
 Ceci est une page test
 </title>
 </head>
 <body>
-<div id='z1'>
+<div id='container_login'>
+<div id='z1_login'>
+1
 </div>
-<div id='z2'>
+<div id='z2_login'>
+2
+</div>
 </div>
 </body>
 </html>
