--- a/userarea/test3.html
+++ b/userarea/test3.html
@@ -1,40 +1,10 @@
 <!DOCTYPE html>
 <html lang='fr'>
 <head>
-<style>
-#parentlayout {
-        display: grid;
-        grid-template-columns: 200px repeat(4, 1fr);
-        grid-template-rows: 50px 500px 50px;
-        grid-column-gap: 1px;
-        grid-row-gap: 1px;
-        background-color: indianred;
-        padding:10px;
-}
-#z0 {
-        grid-area: 1 / 1 / 2 / 6;
-        background-color:white;
-        display: grid;
-        place-items: start center;
-}
-#z1 {
-        grid-area: 2 / 1 / 3 / 2;
-        background-color:white;
-}
-#z2 {
-        grid-area: 2 / 2 / 3 / 6;
-        background-color:white;
-}
-#z3 {
-        grid-area: 3 / 1 / 4 / 6;
-        background-color:white;
-        display: grid;
-        place-items: end center;
-}
-</style>
 <title>
 Ceci est une page test
 </title>
+<link href='css/pagetest.css' rel='stylesheet'/>
 </head>
 <body>
 <div id='parentlayout'>
