--- a/userarea/test.html
+++ b/userarea/test.html
@@ -64,5 +64,15 @@ Test de titre 4
 <h5>
 Test de titre 5
 </h5>
+<abbr title='World Health Organization'>
+WHO
+</abbr>
+<br/>
+<img src='img/planets.gif' width='145' height='126' usemap='#planetmap'/>
+<map name='planetmap'>
+<area shape='rect' coords='0,0,82,126' href='sun.htm'/>
+<area shape='circle' coords='90,58,3' href='mercur.htm'/>
+<area shape='circle' coords='124,58,8' href='venus.htm'/>
+</map>
 </body>
 </html>
