--- a/userarea/test.html
+++ b/userarea/test.html
@@ -74,5 +74,8 @@ WHO
 <area shape='circle' coords='90,58,3' href='mercur.htm'/>
 <area shape='circle' coords='124,58,8' href='venus.htm'/>
 </map>
+<br/>
+<audio controls src='img/horse.ogg'>
+</audio>
 </body>
 </html>
