--- a/userarea/test_loginform.html
+++ b/userarea/test_loginform.html
@@ -17,7 +17,7 @@
                 <label for="password"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="password" required/>
 
-                <button type="submit">Login</button>
+                <button type="submit"><h3>Login</h3></button>
                 <input id="rememberme" type="checkbox" checked="checked" name="remember"/> Remember me
                 <span class="psw">Forgot <a href="forgotpassword.btl">password?</a></span>
             </div>
