--- a/site/presentation.html
+++ b/site/presentation.html
@@ -24,33 +24,44 @@
   <section>
     <h2>💡 Pourquoi Beetle ?</h2>
     <div class="grid">
-        <a href="simple.html" class="card">
+      <a href="simple.html" class="card">
         <h3>🧠 Simple par conception</h3>
         <p>Chaque mot exécute une seule action. Une logique séquentielle claire et élégante qui facilite la lecture et la maintenance du code.</p>
-        </a>
-        <a href="modulaire.html" class="card">
+      </a>
+      <a href="modulaire.html" class="card">
         <h3>🔗 Modulaire et extensible</h3>
         <p>Chargez des packages et combinez-les pour étendre le langage à votre guise : formulaires, traduction, e-mails, base de données, etc.</p>
-        </a>
-        <a href="multilingue.html" class="card">
+      </a>
+      <a href="multilingue.html" class="card">
         <h3>🌍 Multilingue natif</h3>
         <p>Intégrez vos traductions directement dans le code. Beetle choisit automatiquement la langue adaptée à l’utilisateur.</p>
-        </a>
-        <a href="web.html" class="card">
+      </a>
+      <a href="web.html" class="card">
         <h3>⚙️ Fait pour le Web</h3>
         <p>Grâce à son interpréteur Python, Beetle génère du HTML, gère des formulaires et automatise vos flux web en toute légèreté.</p>
-        </a>
-        <a href="programmable.html" class="card">
+      </a>
+      <a href="programmable.html" class="card">
         <h3>🧩 Programmable et introspectif</h3>
         <p>Manipulez les séquences, instructions et packages dynamiquement. Beetle peut se modifier et s’étendre lui-même, depuis l’intérieur.</p>
-        </a>
-        <a href="robuste.html" class="card">
+      </a>
+      <a href="robuste.html" class="card">
         <h3>🔒 Précis et robuste</h3>
         <p>Un système d’erreurs clair et structuré : chaque module sait signaler précisément ses problèmes, pour un débogage simple et efficace.</p>
-        </a>
+      </a>
+      <a href="console.html" class="card">
+        <h3>🖥️ Console intégrée</h3>
+        <p>Exécutez Beetle depuis une console interactive : testez vos séquences, expérimentez ou déboguez en direct.</p>
+      </a>
+      <a href="installation.html" class="card">
+        <h3>⚡ Installation simple</h3>
+        <p>Fonctionne avec Python et Apache. Nécessite seulement quelques dépendances : keyboard, legacy-cgi et mysql-connector-python.</p>
+      </a>
+      <a href="forth.html" class="card">
+        <h3>🏛️ Héritier de Forth</h3>
+        <p>Beetle s’inspire de Forth : un langage minimaliste et séquentiel basé sur la pile, modernisé pour le web et Python.</p>
+      </a>
     </div>
   </section>
-
   <section>
     <h2>🧩 Un exemple vaut mille mots</h2>
     <pre><code>&lt;?btl
