--- a/site/installation.html
+++ b/site/installation.html
@@ -16,7 +16,7 @@
   <section>
     <h2>Prérequis</h2>
     <ul>
-      <li>Python 3.10 ou plus</li>
+      <li>Python 3.12 ou plus</li>
       <li>Apache avec support CGI activé</li>
       <li>Les packages suivants :
         <pre><code>pip install keyboard legacy-cgi mysql-connector-python</code></pre>
@@ -26,7 +26,7 @@
 
   <section>
     <h2>Installation rapide</h2>
-    <pre><code>git clone https://github.com/tonrepo/beetle.git
+    <pre><code>git clone https://github.com/fvissault/pybee.git
 cd beetle
 chmod +x cgi-bin/*.py
 </code></pre>
