--- a/site/console.html
+++ b/site/console.html
@@ -10,16 +10,26 @@
 
   <header>
     <h1>🖥️ Console intégrée</h1>
-    <p>Beetle ne se limite pas au web. Il dispose d’une console interactive, idéale pour tester rapidement du code ou explorer le langage.</p>
+    <p>Beetle ne se limite pas au web. Il dispose d'une console interactive, idéale pour tester rapidement du code ou explorer le langage.</p>
   </header>
 
   <section>
-    <h2>Un environnement d’expérimentation</h2>
+    <h2>Un environnement d'expérimentation</h2>
     <p>
-      La console Beetle offre un moyen direct d’interagir avec l’interpréteur.  
-      Elle permet d’exécuter des séquences, d’observer la pile et de tester des packages sans lancer d’interface web.
+      La console Beetle offre un moyen direct d'interagir avec l'interpréteur.  
+      Elle permet d'exécuter des séquences, d'observer la pile et de tester des packages sans lancer d'interface web.
     </p>
     <pre><code>$ python beetle.py
+ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+ooooooooooooooooooooo .----   .-----  .-----  ---.---  .         .----- ooooooooooooooooooo
+oooooooooooooooooooo //   /  //      //         //    //        //     oooooooooooooooooooo
+ooooooooooooooooooo //---   //---   //---      //    //        //---  ooooooooooooooooooooo
+oooooooooooooooooo //   /  //      //         //    //        //     oooooooooooooooooooooo
+ooooooooooooooooo //___/  //____  //____     //    //_____   //____ ooooooooooooooooooooooo
+ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
+oooo Interpreter version : v2.4.3 -- Console version : v1.0.6 -- Core version : v1.7.2 oooo
+oooo Current date : 10/31/2025 11:42:34 ---------------------------------------------- oooo
+ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
 beetle> 10 20 + .
 30
 beetle> : triple 3 * ;
