--- a/site/presentation.html
+++ b/site/presentation.html
@@ -11,6 +11,7 @@
   <header>
     <h1>🪲 Beetle — Le langage Forth moderne pour le Web</h1>
     <p>Un langage minimaliste et modulaire, conçu pour créer des pages web dynamiques et automatiser vos tâches sans complexité.</p>
+    <a href="index.html" class="text-blue-600 hover:underline">← Retour à l'accueil</a>
   </header>
 
   <section>
