--- a/site/presentation.html
+++ b/site/presentation.html
@@ -17,7 +17,7 @@
   <section>
     <h2>🚀 Un langage minimaliste. Une puissance maximale.</h2>
     <p>
-      Inspiré de Forth et propulsé par Python, <strong>Beetle</strong> combine la simplicité d’un langage à pile avec la flexibilité du web moderne.
+      Inspiré de Forth et propulsé par Python, <strong>Beetle</strong> combine la simplicité d'un langage à pile avec la flexibilité du web moderne.
       Son approche séquentielle rend le code prévisible, lisible et extensible — parfait pour les générateurs de contenu, les outils internes ou les applications légères.
     </p>
   </section>
@@ -35,7 +35,7 @@
       </a>
       <a href="multilingue.html" class="card">
         <h3>🌍 Multilingue natif</h3>
-        <p>Intégrez vos traductions directement dans le code. Beetle choisit automatiquement la langue adaptée à l’utilisateur.</p>
+        <p>Intégrez vos traductions directement dans le code. Beetle choisit automatiquement la langue adaptée à l'utilisateur.</p>
       </a>
       <a href="web.html" class="card">
         <h3>⚙️ Fait pour le Web</h3>
@@ -43,11 +43,11 @@
       </a>
       <a href="programmable.html" class="card">
         <h3>🧩 Programmable et introspectif</h3>
-        <p>Manipulez les séquences, instructions et packages dynamiquement. Beetle peut se modifier et s’étendre lui-même, depuis l’intérieur.</p>
+        <p>Manipulez les séquences, instructions et packages dynamiquement. Beetle peut se modifier et s'étendre lui-même, depuis l'intérieur.</p>
       </a>
       <a href="robuste.html" class="card">
         <h3>🔒 Précis et robuste</h3>
-        <p>Un système d’erreurs clair et structuré : chaque module sait signaler précisément ses problèmes, pour un débogage simple et efficace.</p>
+        <p>Un système d'erreurs clair et structuré : chaque module sait signaler précisément ses problèmes, pour un débogage simple et efficace.</p>
       </a>
       <a href="console.html" class="card">
         <h3>🖥️ Console intégrée</h3>
@@ -59,7 +59,7 @@
       </a>
       <a href="forth.html" class="card">
         <h3>🏛️ Héritier de Forth</h3>
-        <p>Beetle s’inspire de Forth : un langage minimaliste et séquentiel basé sur la pile, modernisé pour le web et Python.</p>
+        <p>Beetle s'inspire de Forth : un langage minimaliste et séquentiel basé sur la pile, modernisé pour le web et Python.</p>
       </a>
     </div>
   </section>
@@ -96,7 +96,7 @@ html @ generate cls
   </section>
 
   <footer>
-    🪲 Beetle — parce qu’un langage ne doit pas être lourd pour être puissant.<br>
+    🪲 Beetle — parce qu'un langage ne doit pas être lourd pour être puissant.<br>
     © 2025 Beetle Project
   </footer>
 
