--- a/site/licence.html
+++ b/site/licence.html
@@ -28,11 +28,11 @@
           simplicité, modularité et portabilité. Ce projet est distribué sous la licence open-source suivante :
         </p>
             <p class="mb-6 text-gray-600 text-justify">
-            Le langage <strong>Beetle</strong> et l’ensemble de ses composants (scripts, modules, documentation)
+            Le langage <strong>Beetle</strong> et l'ensemble de ses composants (scripts, modules, documentation)
             sont mis à disposition pour consultation et modification personnelle, sous les conditions suivantes :
             </p>
 
-            <h3 class="text-2xl font-semibold text-blue-700 mb-4">Conditions d’utilisation</h3>
+            <h3 class="text-2xl font-semibold text-blue-700 mb-4">Conditions d'utilisation</h3>
 
             <ul class="list-disc pl-6 space-y-3 text-gray-700">
                 <li>Vous êtes autorisé à <strong>consulter, utiliser et modifier</strong> le code source de Beetle pour un usage personnel, éducatif ou expérimental.</li>
@@ -40,16 +40,16 @@
                 <li>La seule référence officielle du projet est le dépôt GitHub :
                     <a href="https://github.com/fvissault/pybee" class="text-blue-600 hover:underline">github.com/fvissault/pybee</a>
                 </li>
-                <li>Toute publication, diffusion ou dérivé du code doit faire l’objet d’un accord explicite de l’auteur.</li>
+                <li>Toute publication, diffusion ou dérivé du code doit faire l'objet d'un accord explicite de l'auteur.</li>
             </ul>
 
             <h3 class="text-2xl font-semibold text-blue-700 mt-8 mb-4">Absence de garantie</h3>
 
             <p class="text-gray-700 text-justify mb-4">
                 Ce logiciel est fourni « tel quel », sans aucune garantie, expresse ou implicite,
-                y compris mais sans s’y limiter, les garanties de qualité marchande, d’adéquation à un usage particulier
-                ou d’absence de contrefaçon. L’auteur ne saurait être tenu responsable de tout dommage direct ou indirect
-                résultant de l’utilisation de Beetle ou de ses composants.
+                y compris mais sans s'y limiter, les garanties de qualité marchande, d'adéquation à un usage particulier
+                ou d'absence de contrefaçon. L'auteur ne saurait être tenu responsable de tout dommage direct ou indirect
+                résultant de l'utilisation de Beetle ou de ses composants.
             </p>
 
             <p class="text-gray-700 text-justify">
