--- a/site/index.html
+++ b/site/index.html
@@ -58,7 +58,7 @@
 
     <div class="bg-white p-6 rounded-2xl shadow hover:shadow-md transition">
       <h3 class="text-xl font-semibold mb-2 text-blue-600">Contact</h3>
-      <p class="text-gray-600 mb-4">Besoin d’informations, d’un accompagnement ou d’un devis ? Écrivez-nous.</p>
+      <p class="text-gray-600 mb-4">Besoin d'informations, d'un accompagnement ou d'un devis ? Écrivez-nous.</p>
       <a href="contact.html" class="text-blue-600 font-medium hover:underline">Nous contacter →</a>
     </div>
   </section>
