--- a/site/presentation.html
+++ b/site/presentation.html
@@ -61,6 +61,12 @@
         <h3>🏛️ Héritier de Forth</h3>
         <p>Beetle s'inspire de Forth : un langage minimaliste et séquentiel basé sur la pile, modernisé pour le web et Python.</p>
       </a>
+      <a href="quantum.html" class="card">
+        <h3>⚛️ Beetle et le calcul quantique</h3>
+        <p>
+          États, transformations et opérateurs : Beetle adopte une vision où chaque mot modifie l'état du système, comme une expérience contrôlée sur la pile.
+        </p>
+      </a>
     </div>
   </section>
   <section>
